# cpp-baremetal-concurrency

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: unit_tests.yml  usage_test.yml
docs/: index.adoc
include/conc/: atomic.hpp  concepts.hpp  concurrency.hpp  test.hpp
include/conc/detail/: freestanding.hpp
test/: CMakeLists.txt  atomic_cfg.hpp  atomic_injected_policy.cpp  atomic_standard_policy.cpp  conc_standard_policy.cpp  conc_test_policy.cpp  concepts.cpp  fail_no_conc_policy.cpp  freestanding_conc_injected_policy.cpp  freestanding_injected_policy.cpp  hosted_conc_injected_policy.cpp  hosted_injected_policy.cpp  standard_policy.cpp
usage_test/: CMakeLists.txt  main.cpp
